@@ -7,6 +7,7 @@ copyright_year      = 2010
 [@Author::DOHERTY]
 version_regexp = ^v(.+)$
 tag_format = v%v
+critic_config = .perlcriticrc
 
 [Prereqs] ; Why are these here?
 Test::Perl::Critic      = 0
