@@ -30,6 +30,10 @@ In F<dist.ini>:
 
     [@TestingMania]
 
+=for test_synopsis
+1;
+__END__
+
 =head1 DESCRIPTION
 
 This plugin bundle collects all the testing plugins for L<Dist::Zilla> which
@@ -62,7 +66,11 @@ is not enabled by default; see L</"Enabling Tests">.
 =item *
 
 L<Dist::Zilla::Plugin::CriticTests>, which checks your code against best
-practices. See L<Perl::Critic> for details.
+practices. See L<Perl::Critic> for details. You can set a perlcritic config
+file:
+
+    [@TestingMania]
+    critic_config = perlcriticrc
 
 =item *
 
@@ -166,6 +174,8 @@ To enable a testing plugin, give a comma-separated list in F<dist.ini>:
     [@TestingMania]
     enable = ConsistentVersionTest
 
+=for Pod::Coverage configure
+
 =cut
 
 use Moose;
@@ -180,7 +190,7 @@ sub configure {
         'Test::Pod::LinkCheck'  => 1,
         CompileTests            => 1,
         ConsistentVersionTest   => 0, # finnicky and annoying
-        CriticTests             => 1,
+        CriticTests             => $self->config_slice('critic_config'),
         DistManifestTests       => 1,
         EOLTests                => 1,
         HasVersionTests         => 1,
@@ -224,9 +234,3 @@ sub configure {
 __PACKAGE__->meta->make_immutable();
 
 no Moose;
-
-=for Pod::Coverage configure
-
-=for test_synopsis
-1;
-__END__
